syntax = "proto3";

package swarm.messages;

message SwarmMessage {
  oneof payload {
    LockMessage lock_message = 1;
  }
}

message LockMessage {
  enum Action {
    Created = 0;
    Removed = 1;
    Locked = 2;
    Unlocked = 3;
  }
  string name = 1;
  Action action = 2;
}
